--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
     "@aws-sdk/client-s3": "^3.908.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@mux/mux-player-react": "^3.6.1",
     "@prisma/client": "^6.17.1",
