--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tiptap/core": "^3.6.6",
     "@tiptap/extension-character-count": "^3.6.6",
     "@tiptap/extension-code-block": "^3.6.6",
