--- a/package.json
+++ b/package.json
@@ -51,15 +51,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns-jalali": "^4.1.0-0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.3.0",
+    "shamsi-date-converter": "^1.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
