--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@aws-sdk/client-s3": "^3.908.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.2",
     "@mux/mux-player-react": "^3.6.1",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -53,6 +59,7 @@
     "cmdk": "^1.1.1",
     "date-fns-jalali": "^4.1.0-0",
     "formidable": "^3.5.4",
+    "fullcalendar": "^6.1.19",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
