--- a/package.json
+++ b/package.json
@@ -45,23 +45,27 @@
     "@tiptap/pm": "^3.6.6",
     "@tiptap/react": "^3.6.6",
     "@tiptap/starter-kit": "^3.6.6",
+    "@types/react-big-calendar": "^1.16.3",
     "@uploadthing/react": "^7.3.3",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns-jalali": "^4.1.0-0",
+    "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "fullcalendar": "^6.1.19",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-multi-date-picker": "^4.5.2",
     "recharts": "^3.3.0",
     "shamsi-date-converter": "^1.0.5",
     "tailwind-merge": "^3.3.1",
@@ -73,6 +77,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.6",
+    "@types/jalaali-js": "^1.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
